[project]
name = "mpsig"
version = "0.0.1.dev1"
dependencies = [
    "mpmath",
]
description = "A few functions related to signal processing, implemented with mpmath."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [
  {name = 'Warren Weckesser', email = 'warren.weckesser+mpsig@gmail.com'},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/WarrenWeckesser/mpsig"
"Bug Tracker" = "https://github.com/WarrenWeckesser/mpsig/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
